--- a/style.css
+++ b/style.css
@@ -43,6 +43,31 @@ header {
   margin-left: 5px;
 }
 
+main {
+  padding: 30px 0;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(39, 33, 66, 0.4);
+  font-weight: 500;
+}
+.weather-app-details strong {
+  color: #b1e1f8;
+}
+
 footer {
   border-top: 1px solid #d8e9f2;
   padding: 30px 0 0 0;
