--- a/style.css
+++ b/style.css
@@ -1,21 +1,48 @@
 body {
-  background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  background: hsla(27, 83%, 60%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(27, 83%, 60%, 1) 0%,
+    hsla(220, 35%, 55%, 1) 60%,
+    hsla(222, 31%, 47%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(27, 83%, 60%, 1) 0%,
+    hsla(220, 35%, 55%, 1) 60%,
+    hsla(222, 31%, 47%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(27, 83%, 60%, 1) 0%,
+    hsla(220, 35%, 55%, 1) 60%,
+    hsla(222, 31%, 47%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#EE9043", endColorstr="#657FB5", GradientType=1 );
   background-repeat: no-repeat;
-  background-size: cover;
+  height: 100vh;
+
   font-family: "Roboto", sans-serif;
 }
 
 .weather-app {
-  background: white;
   max-width: 600px;
-  border-radius: 16px;
   margin: 50px auto;
   padding: 30px;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 a {
-  color: #b1e1f8;
+  color: #2274a5;
 }
 
 header {
@@ -35,7 +62,7 @@ header {
 
 .search-form-button {
   background-color: #b1e1f8;
-  color: white;
+  color: #f05d5e;
   border-radius: 6px;
   border: none;
   font-size: 16px;
