--- a/style.css
+++ b/style.css
@@ -107,20 +107,21 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 20px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
   font-weight: bold;
   color: #ffffff;
-  margin-left: 10px;
+
+  line-height: 88px;
 }
 
 .weather-app-unit {
   font-size: 28px;
-  margin-top: 16px;
+  margin-top: 6px;
   color: #ffffff;
 }
 
