--- a/style.css
+++ b/style.css
@@ -126,23 +126,27 @@ main {
 }
 
 .weather-forecast {
-  margin-top: 25px;
-  text-align: center;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .weather-forecast-date {
   font-size: 16px;
   color: rgba(39, 33, 66, 0.7);
   font-weight: 500;
+  text-align: center;
 }
 
 .weather-forecast-icon {
   font-size: 35px;
+  text-align: center;
 }
 
 .weather-forecast-temperatures {
   font-size: 14px;
   color: #ffffff;
+  text-align: center;
 }
 
 footer {
