--- a/style.css
+++ b/style.css
@@ -139,15 +139,21 @@ main {
 }
 
 .weather-forecast-icon {
-  font-size: 35px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 
 .weather-forecast-temperatures {
-  font-size: 14px;
+  font-size: 15px;
   color: #ffffff;
   text-align: center;
-  
+}
+
+.weather-forecast-temperature-max,
+.weather-forecast-temperature-min {
+  padding: 0 10px;
 }
 
 footer {
